@@ -108,7 +108,7 @@ public class CreateFunctionEngineReactor extends AbstractReactor {
 			}
 
 			String functionClass = functionType.getFunctionClass();
-			function = (IFunctionEngine) Class.forName(functionClass).newInstance();
+			function = (IFunctionEngine) Class.forName(functionClass).getDeclaredConstructor().newInstance();
 			tempSmss = UploadUtilities.createTemporaryFunctionSmss(functionId, functionName, functionClass,
 					functionDetails);
 
@@ -124,18 +124,15 @@ public class CreateFunctionEngineReactor extends AbstractReactor {
 			UploadUtilities.updateDIHelper(functionId, functionName, function, smssFile);
 			SecurityEngineUtils.addEngine(functionId, false, user);
 
-			// even if no security, just add user as database owner
-			if (user != null) {
-				List<AuthProvider> logins = user.getLogins();
-				for (AuthProvider ap : logins) {
-					SecurityEngineUtils.addEngineOwner(functionId, user.getAccessToken(ap).getId());
-				}
+			List<AuthProvider> logins = user.getLogins();
+			for (AuthProvider ap : logins) {
+				SecurityEngineUtils.addEngineOwner(functionId, user.getAccessToken(ap).getId());
 			}
 
 			ClusterUtil.pushEngine(functionId);
 		} catch (Exception e) {
 			classLogger.error(Constants.STACKTRACE, e);
-			cleanUpCreateNewError(function, functionId, tempSmss, smssFile, specificEngineFolder);
+			UploadUtilities.cleanUpCreateNewError(function, functionId, tempSmss, smssFile, specificEngineFolder);
 			return new NounMetadata(e.getMessage(), PixelDataType.CONST_STRING, PixelOperationType.ERROR);
 		}
 
@@ -144,40 +141,10 @@ public class CreateFunctionEngineReactor extends AbstractReactor {
 	}
 
 	/**
-	 * Delete all the corresponding files that are generated from the upload the
-	 * failed
-	 */
-	private void cleanUpCreateNewError(IFunctionEngine function, String storageId, File tempSmss, File smssFile,
-			File specificEngineFolder) {
-		try {
-			// close the function so we can delete it
-			if (function != null) {
-				function.close();
-			}
-
-			// delete the .temp file
-			if (tempSmss != null && tempSmss.exists()) {
-				FileUtils.forceDelete(tempSmss);
-			}
-			// delete the .smss file
-			if (smssFile != null && smssFile.exists()) {
-				FileUtils.forceDelete(smssFile);
-			}
-			if (specificEngineFolder != null && specificEngineFolder.exists()) {
-				FileUtils.forceDelete(specificEngineFolder);
-			}
-
-			UploadUtilities.removeEngineFromDIHelper(storageId);
-		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
-		}
-	}
-
-	/**
 	 * @return
 	 */
 	private String getFunctionName() {
-		GenRowStruct grs = this.store.getNoun(ReactorKeysEnum.FUNCTION.getKey());
+		GenRowStruct grs = this.store.getGenRowStruct(ReactorKeysEnum.FUNCTION.getKey());
 		if (grs != null && !grs.isEmpty()) {
 			List<String> strValues = grs.getAllStrValues();
 			if (strValues != null && !strValues.isEmpty()) {
@@ -197,7 +164,7 @@ public class CreateFunctionEngineReactor extends AbstractReactor {
 	 * @return
 	 */
 	private Map<String, Object> getFunctionDetails() {
-		GenRowStruct grs = this.store.getNoun(ReactorKeysEnum.FUNCTION_DETAILS.getKey());
+		GenRowStruct grs = this.store.getGenRowStruct(ReactorKeysEnum.FUNCTION_DETAILS.getKey());
 		if (grs != null && !grs.isEmpty()) {
 			List<NounMetadata> mapNouns = grs.getNounsOfType(PixelDataType.MAP);
 			if (mapNouns != null && !mapNouns.isEmpty()) {
@@ -222,7 +189,7 @@ public class CreateFunctionEngineReactor extends AbstractReactor {
 		String insightFolder = this.insight.getInsightFolder();
 
 		// see if added as key
-		GenRowStruct grs = this.store.getNoun(ReactorKeysEnum.FILE_PATH.getKey());
+		GenRowStruct grs = this.store.getGenRowStruct(ReactorKeysEnum.FILE_PATH.getKey());
 		if (grs != null && !grs.isEmpty()) {
 			int size = grs.size();
 			for (int i = 0; i < size; i++) {
